K8S/category-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: categories-deploy
spec:
   replicas: 1
   selector:
      matchLabels:
         app: categoryservice
   template:
      metadata:
         labels:
            app: categoryservice
      spec:
         containers:
            - name: categoryservice
              image: jeysongomes/categoryservice:latest
