K8S/product-np-srv-deploy.yaml
apiVersion: v1
kind: Service
metadata:
   name: productnpservice-srv
spec:
   type: NodePort
   selector:
      app: productservice
   ports:
      - name: productservice
        protocol: TCP
        port: 80
        targetPort: 80
